; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_videobuf-dma-contig.c_videobuf_to_dma_contig.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_videobuf-dma-contig.c_videobuf_to_dma_contig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.videobuf_buffer = type { %struct.videobuf_dma_contig_memory* }
%struct.videobuf_dma_contig_memory = type { i32, i32 }

@MAGIC_DC_MEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @videobuf_to_dma_contig(%struct.videobuf_buffer* %0) #0 {
  %2 = alloca %struct.videobuf_buffer*, align 8
  %3 = alloca %struct.videobuf_dma_contig_memory*, align 8
  store %struct.videobuf_buffer* %0, %struct.videobuf_buffer** %2, align 8
  %4 = load %struct.videobuf_buffer*, %struct.videobuf_buffer** %2, align 8
  %5 = getelementptr inbounds %struct.videobuf_buffer, %struct.videobuf_buffer* %4, i32 0, i32 0
  %6 = load %struct.videobuf_dma_contig_memory*, %struct.videobuf_dma_contig_memory** %5, align 8
  store %struct.videobuf_dma_contig_memory* %6, %struct.videobuf_dma_contig_memory** %3, align 8
  %7 = load %struct.videobuf_dma_contig_memory*, %struct.videobuf_dma_contig_memory** %3, align 8
  %8 = icmp ne %struct.videobuf_dma_contig_memory* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.videobuf_dma_contig_memory*, %struct.videobuf_dma_contig_memory** %3, align 8
  %13 = getelementptr inbounds %struct.videobuf_dma_contig_memory, %struct.videobuf_dma_contig_memory* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @MAGIC_DC_MEM, align 4
  %16 = call i32 @MAGIC_CHECK(i32 %14, i32 %15)
  %17 = load %struct.videobuf_dma_contig_memory*, %struct.videobuf_dma_contig_memory** %3, align 8
  %18 = getelementptr inbounds %struct.videobuf_dma_contig_memory, %struct.videobuf_dma_contig_memory* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @MAGIC_CHECK(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
